--- a/reclaim/templates/storeview/item_detail.html
+++ b/reclaim/templates/storeview/item_detail.html
@@ -22,10 +22,10 @@
           <p class="card-text">{{ item.item_lost_location }}</p>
           <p class="card-text">{{ item.item_keyword }}</p>
           <a href="{% url 'storeview:update' item.pk %}" class="btn btn-primary">編集する</a>
-          <button id="delete-check">delete</button>
+          <button class="btn btn-danger" id="delete-check">削除</button>
           <form action="{% url 'storeview:delete' item.pk %}" method="post" name="delete" style="display: none;">
             {% csrf_token %}
-            <button type="submit" id="delete" class="btn btn-danger">削除</button>
+            <button type="submit" id="delete">削除</button>
           </form>
           <a href="{% url 'storeview:index' %}" class="btn btn-primary">戻る</a>
         </div>
@@ -37,12 +37,10 @@
     const delete_check_button = document.getElementById('delete-check')
     const delete_button = document.getElementById('delete')
     delete_check_button.addEventListener('click', () => {
-      var result = window.confirm('これが確認ダイアログです。')
+      var result = window.confirm('本当に削除しますか？')
       if (result) {
-        alert('削除しました。')
         delete_button.click()
       } else {
-        alert('キャンセルしました。')
       }
     })
   </script>
