--- a/reclaim/templates/storeview/upd-form.html
+++ b/reclaim/templates/storeview/upd-form.html
@@ -67,7 +67,7 @@
     <div class="mb-3">
       <label for="id_item_keyword" class="form-label">キーワード:</label>
       {{ form.item_keyword.errors }}
-      <textarea name="item_keyword" cols="40" rows="10" required="" id="id_item_keyword" class="form-control">{{ item_instance.item_keyword }}</textarea>
+      <textarea name="item_keyword" cols="40" rows="10" id="id_item_keyword" class="form-control">{{ item_instance.item_keyword }}</textarea>
     </div>
 
     <div class="mb-3">
