--- a/reclaim/templates/userview/contact.html
+++ b/reclaim/templates/userview/contact.html
@@ -4,49 +4,7 @@
   Contact Us
 {% endblock %}
 {% block body %}
-  <style>
-    .container {
-      margin: 0 auto;
-      width: 50%;
-    }
-    h1 {
-      text-align: center;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-    .form-group {
-      margin-bottom: 1rem;
-    }
-    label {
-      font-weight: bold;
-    }
-    input,
-    textarea {
-      width: 100%;
-      padding: 0.5rem;
-      font-size: 1rem;
-    }
-    button {
-      padding: 0.5rem;
-      font-size: 1rem;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'css/contact.css' %}" />
   <div class="container">
     <h1>Contact Us About an Item</h1>
     {% if user.is_authenticated %}
@@ -54,7 +12,7 @@
         {% csrf_token %}
         <div class="form-group">
           <label for="email">Your Email:</label>
-          <input type="email" id="email" name="email" required value="{{ user.email }}" />
+          <input type="email" id="email" name="email" required readonly value="{{ user.email }}" />
           <a href="{% url 'accounts:profile' %}">異なる場合はこちらから変更してください</a>
           {% comment %}# TODO edit機能をつける{% endcomment %}
         </div>
