--- a/reclaim/templates/storeview/form.html
+++ b/reclaim/templates/storeview/form.html
@@ -10,7 +10,7 @@
   <h1 class="py-2 mx-3">落とし物登録フォーム</h1>
 
   {{ form.errors }}
-  <form method="post" class="mx-3">
+  <form method="post" enctype="multipart/form-data" class="mx-3">
     {% csrf_token %}
 
     <div class="mb-3">
