--- a/reclaim/templates/storeview/overview.html
+++ b/reclaim/templates/storeview/overview.html
@@ -16,7 +16,7 @@
     <script src="{% static 'js/scroll.js' %}" defer></script>
   </head>
   <body>
-    {{ if user.is_authenticated }}
+    {% if user.is_authenticated %}
     <nav class="navbar navbar-dark sticky-top bg-success">
       <a class="navbar-brand" href="{% url 'storeview:index' %}">Reclaim</a>
       <div class="navbar-nav d-flex flex-row">
@@ -26,6 +26,8 @@
 
       </div>
     </nav>
+    {% endif %}
+    {% if object_list %}
     <div class="list slider">
       {% for item in object_list %}
         <div class="card p-4 m-4 bg-light border border-success rounded">
@@ -44,7 +46,7 @@
         </div>
       {% endfor %}
     </div>
-    {% else %}
+    {% endif %}
     
   </body>
 </html>
